# fruit

./: .gitignore  ABSTRACT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/agents/: worker.md
.claude/commands/: audit.md  evolve.md  meta-work.md  work.md
benches/: benchmarks.rs
src/: comments.rs  file_utils.rs  git.rs  imports.rs  language.rs  lib.rs  main.rs  metadata.rs  output.rs  stats.rs  string_utils.rs  test_utils.rs  todos.rs  tree.rs  types.rs
src/extractors/: comments.rs  imports.rs  mod.rs  todos.rs  types.rs
src/extractors/languages/: mod.rs
src/output/: config.rs  json.rs  markdown.rs  mod.rs  streaming.rs  tree.rs  utils.rs
src/tree/: config.rs  filter.rs  json_types.rs  mod.rs  streaming.rs  traversal.rs  utils.rs  walker.rs
tests/: edge_cases.rs  harness.rs  integration.rs
