[package]
name = "fruit"
version = "0.1.0"
edition = "2024"
description = "Tree but just the juicy bits"
license = "MIT"
repository = "https://github.com/sammcvicker/fruit"
keywords = ["tree", "cli", "git", "directory"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
glob = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
