[package]
name = "fruit"
version = "0.2.0"
edition = "2024"
description = "Tree but just the juicy bits"
license = "MIT"
repository = "https://github.com/sammcvicker/fruit"
keywords = ["tree", "cli", "git", "directory"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default = []
test-utils = ["dep:tempfile"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
glob = "0.3.3"
humantime = "2.1"
ignore = "0.4"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1.4"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
fruit = { path = ".", features = ["test-utils"] }

[[bench]]
name = "benchmarks"
harness = false
